--- a/expense-tracker-frontend/public/index.html
+++ b/expense-tracker-frontend/public/index.html
@@ -27,8 +27,18 @@
     <!-- Google Fonts for better typography -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>MoneyTrail - Smart Finance Tracker</title>
+    
+    <!-- Dark mode script to prevent flash of unstyled content -->
+    <script>
+      try {
+        var colorMode = localStorage.getItem('chakra-ui-color-mode');
+        if (colorMode === 'dark') {
+          document.documentElement.style.colorScheme = 'dark';
+        }
+      } catch (e) {}
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
